chore: disable java null analysis in VS Code settings